2006-01-18  Roland McGrath  <roland@redhat.com>

	* sysdeps/ieee754/ldbl-opt/nldbl-dprintf.c: Restore
	attribute_hidden here.

	* sysdeps/sparc/sparc64/Makefile (long-double-fcts): Move this ...
	* sysdeps/sparc/Makefile (long-double-fcts): ... to here.

2006-01-18  Jakub Jelinek  <jakub@redhat.com>

	* elf/dl-deps.c (_dl_map_object_deps): In case of failure also make a
	copy of objname string.

2006-01-16  Roland McGrath  <roland@redhat.com>

	* Makerules ($(+sysdir_pfx)sysd-rules): Emit pattern rules to install
	into $(inst_includedir)/%.h from sysdirs.
	[headers]: Change static pattern rule for installing
	$(headers) to do only those not matching %.h.
	($(inst_includedir)/%.h: $(objpfx)%.h): Add this pattern rule instead.
	($(inst_includedir)/%.h: %.h): Likewise.
	($(inst_includedir)/%.h: $(..)include/%.h): Likewise.

	* Makefile ($(inst_includedir)/gnu/stubs.h):
	Add $(make-target-directory).

	* stdlib/Makefile (headers): Restore headers removed in last change.

2006-01-16  Jakub Jelinek  <jakub@redhat.com>

	* math/e_exp2l.c: Don't include stdio.h, errno.h, stub-tag.h, include
	math_private.h.
	(__ieee754_exp2l): Compute for now as expl (M_LN2l * x)
	instead of failing.
	(exp2l): Remove stub_warning.

2006-01-15  Jakub Jelinek  <jakub@redhat.com>

	* io/tst-faccessat.c (do_test): Don't fail if geteuid () == 0.

2006-01-16  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/sysv/linux/kernel-features.h: Define
	__ASSUME_TMPFS_NAME.
	* sysdeps/unix/sysv/linux/shm_open.c [!__ASSUME_TMPFS_NAME]
	(where_is_shmfs): Don't test for obsolete shm filesystem name.

	* sysdeps/unix/sysv/linux/getsysstats.c: Don't search for proc
	mount point.  We assume procfs is mounted at /proc in many other
	places already.

2006-01-15  Andreas Jaeger  <aj@suse.de>

	[BZ #1950]
	* posix/regex_internal.c (re_string_reconstruct): Adjust for
	build_wcs_upper_buffer change.
	(build_wcs_upper_buffer): Change return type.

	[BZ #2153]